feat: spring boot running, docker, flyway migrations, JPA entities, MongoDB documents